--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,11 +6,13 @@
 
   /* Light Mode */
   --main-light-color: #f7f7f8;
-
+  --tag-color: #eaeaeb;
 
   /* Dark Mode */
   --main-dark-color: #28282f;
   --content-dark-color: #393939;
+  --dark-tag-color: #212123;
+  --dark-tag-text-color: #
 }
 
 /* Reset */
@@ -21,7 +23,7 @@
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* General */
@@ -33,53 +35,94 @@ body {
   font: 100%/1.4 "Open Sans", sans-serif;
   background-color: var(--main-light-color);
 }
-nav {
-    display: flex;
-    justify-content: center;;
-    flex-direction: columns;
-    flex-wrap: wrap;
 
-    margin-bottom: 1em;
+/* Squad-nav */
+nav {
+  display: flex;
+  justify-content: center;
+  flex-direction: columns;
+  flex-wrap: wrap;
+
+  margin-bottom: 1em;
 }
 
 nav a {
-    display: flex;
-    border-radius: 0.3em;
-    color: var(--white);
-    margin: 1em;
-    height: 3.5em;
-    width: 6.5em;
-    background-color: var(--primary-purple);
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  border-radius: 0.3em;
+  color: var(--white);
+  margin: 1em;
+  height: 3.5em;
+  width: 6.5em;
+  background-color: var(--primary-purple);
+  align-items: center;
+  justify-content: center;
 }
 
 .divider {
-    padding: 2px 2px;
-    margin: 0 auto;
-    width: 90%;
-    border-radius: 0.3em;
-    background-color: var(--dark-grey);
+  height: 0.4em;
+  margin: 0 auto;
+  width: 90%;
+  border-radius: 0.3em;
+  background-color: var(--dark-grey);
 }
 
+.filter-section {
+  margin: 0 auto;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+
 .cards-container {
+  width: 95%;
   display: grid;
+  margin: 0 auto;
   grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
   padding-bottom: 1em;
   gap: 0.5em;
 }
 
-.card{
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    max-width: 15em;
-    margin: 1em auto 0 auto;
-    border-radius: 0.3em;
-    background: var(--dark-grey);
-    padding: 0.7em;
-    gap: 1em;
+.info-area {
+  width: 100%;
+}
 
-    color: var(--white);
-    
+.tags {
+  margin-top: 0.5em;
+}
+
+.tag {
+  background-color: var(--tag-color);
+  padding: 0.2em 0.4em;
+  border-radius: 0.8em;
+  color: #464646;
+  font-weight: bold;
+
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  max-width: 15em;
+  margin: 1em auto 0 auto;
+  border-radius: 0.3em;
+  /* background: var(--dark-grey); */
+  padding: 0.7em;
+  gap: 1em;
+
+  color: var(--content-dark-color);
+}
+
+.image-container {
+  position: relative;
+}
+
+.card-image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  max-width: 19em;
+  max-height: 19em;
+  aspect-ratio: 1/1;
 }
