--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,11 +13,26 @@
   </nav>
 
   <hr class="divider"></hr>
+
+  <section class="filter-section"> 
+    <p class="filter">Filter op tag</p>
+    <p class="sort">Sorteren op</p>
+  </section>
+
   <section class="cards-container">
     <% if (squad) { %> 
       <% squad.members.forEach(member => { %>
       <article class="card">
-        <h3><%= member.name %></h3>
+        <div class="image-container">
+          <img class="card-image" src="<%- member.avatar %>" alt="Avatar van <%= member.name %>">
+        </div>
+        
+        <div class="info-area">
+          <h3><%= member.name + " " + member.prefix + " " + member.surname %></h3>
+          <div class="tags">
+            <a class="tag" href="<%= member.website %>" target="_blank">Website</a>
+          </div>
+        </div>
       </article>
     <% })} %>
   </section>
