Fixed missing image problem
Added condition for checking empty avatar fields

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,9 @@
 <main>
   <h2>Bladeren</h2>
   <nav>
-    <a href="/?squad=squad-a-2022">Squad a</a>
-    <a href="/?squad=squad-b-2022">Squad b</a>
-    <a href="/?squad=squat-c-2022">Squad c</a>
+    <a href="/?squad=squad-a-2022">Squad A</a>
+    <a href="/?squad=squad-b-2022">Squad B</a>
+    <a href="/?squad=squat-c-2022">Squat C</a>
     <a href="/?squad=founders-2021">Founders</a>
   </nav>
 
@@ -20,11 +20,20 @@
   </section>
 
   <section class="cards-container">
+    <!-- Check if squad exists -->
     <% if (squad) { %> 
+      <!-- Iterate through squad.members, make a new article for each member -->
       <% squad.members.forEach(member => { %>
       <article class="card">
         <div class="image-container">
+          <% 
+            const avatarSrc = member.avatar
+            if (avatarSrc !== "null" && avatarSrc) {
+          %>
           <img class="card-image" src="<%- member.avatar %>" alt="Avatar van <%= member.name %>">
+          <% } else { %>
+          <img class="card-image" src="./assets/venting.png" alt="Een verdacht poppetje in een schacht">
+          <% } %>
         </div>
         
         <div class="info-area">
