--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,15 +60,14 @@ nav a {
 
 .divider {
   height: 0.4em;
-  margin: 0 auto;
-  width: 90%;
+  margin: 0 3em 0 3em;
+  /* width: 90%; */
   border-radius: 0.3em;
   background-color: var(--dark-grey);
 }
 
 .filter-section {
-  margin: 0 auto;
-  width: 90%;
+  margin: 0 4em 0 4em;
   display: flex;
   justify-content: space-between;
 }
