--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
           %>
         <img class="card-image" src="<%- member.avatar %>" alt="Avatar van <%= member.name %>">
         <% } else { %>
-        <img class="card-image" src="./assets/venting.png" alt="Een verdacht poppetje in een schacht">
+        <img class="card-image" src="/assets/venting.png" alt="Een verdacht poppetje in een schacht">
         <% } %>
       </div>
 
