--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@
   --main-dark-color: #28282f;
   --content-dark-color: #393939;
   --dark-tag-color: #212123;
-  --dark-tag-text-color: #
+  --dark-tag-text-color: #;
 }
 
 /* Reset */
@@ -72,7 +72,6 @@ nav a {
   justify-content: space-between;
 }
 
-
 .cards-container {
   width: 95%;
   display: grid;
@@ -96,7 +95,6 @@ nav a {
   border-radius: 0.8em;
   color: #464646;
   font-weight: bold;
-
 }
 
 .card {
@@ -106,11 +104,16 @@ nav a {
   max-width: 15em;
   margin: 1em auto 0 auto;
   border-radius: 0.3em;
-  /* background: var(--dark-grey); */
   padding: 0.7em;
   gap: 1em;
 
   color: var(--content-dark-color);
+  transition: ease-in-out .2s;
+}
+
+.card:hover {
+  transition: ease 0.2s;
+  box-shadow: 0px 18px 22px -5px rgba(0, 0, 0, 0.6);
 }
 
 .image-container {
