--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <%- include('./partials/head') %>
 
 <header>
-  <h1><%= pageTitle %></h1>
+  
 </header>
 <main>
-  <h2>Bladeren</h2>
+  <h1 class="">Bladeren</h1>
   <nav>
     <% if (pageTitle === "squad-a-2022") { %>
       <a href="/FDND-overzicht/?squad=squad-a-2022" class="nav-link active">Squad A</a>
