--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,6 +40,22 @@ body {
   background-color: var(--main-light-color);
 }
 
+/* Header */
+header {
+  height: 3em;
+  color: var;
+  width: 100%;
+  background-color: var(--main-dark-color);
+  position: sticky;
+}
+
+header > * {
+  color: var(--main-light-color);
+}
+
+
+
+
 /* Squad-nav */
 nav {
   display: flex;
@@ -56,7 +72,7 @@ nav .nav-link {
   color: var(--white);
   margin: 1em;
   height: 3.5em;
-  width: 6.5em;
+  width: 8.5em;
   background-color: var(--primary-purple);
   align-items: center;
   justify-content: center;
@@ -75,7 +91,6 @@ nav .nav-link:hover, .nav-link:focus, .nav-link:active {
   transform: translateY(-0.25em);
   box-shadow: 0 0.5em 0.5em -0.4em var(--primary-purple);
 }
-
 
 
 .divider {
@@ -102,6 +117,8 @@ nav .nav-link:hover, .nav-link:focus, .nav-link:active {
 }
 
 .info-area {
+  padding-top: 0.2em;
+  padding-left: 0.2em;
   width: 100%;
 }
 
@@ -139,6 +156,7 @@ nav .nav-link:hover, .nav-link:focus, .nav-link:active {
 .card:hover {
   transition: ease 0.2s;
   box-shadow: 0px 18px 22px -5px rgba(0, 0, 0, 0.6);
+  transform: translateY(-.3em);
 }
 
 .image-container {
