Grammar error fix

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <%- include('./partials/head') %>
 
 <header>
-  
+  <h1>Bladeren</h1>
 </header>
 <main>
-  <h1 class="">Bladeren</h1>
+  
   <nav>
     <% if (pageTitle === "squad-a-2022") { %>
       <a href="/FDND-overzicht/?squad=squad-a-2022" class="nav-link active">Squad A</a>
@@ -22,7 +22,7 @@
       
       <a href="/FDND-overzicht/?squad=squat-c-2022" class="nav-link active">Squat C</a>
     <% } else { %>
-      <a href="/FDND-overzicht/?squad=squat-c-2022" class="nav-link">Squad C</a>
+      <a href="/FDND-overzicht/?squad=squat-c-2022" class="nav-link">Squat C</a>
     <% } %>
 
     <% if (pageTitle === "founders-2021") { %>
