--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 </header>
 <main>
   <nav>
-    <h1>Bladeren</h1>
+    <h2>Bladeren</h1>
     <ul>
       <li>
         <!-- Check if page title is equal to the pageTitle rendered by index.js -->
@@ -42,13 +42,13 @@
   <hr class="divider">
 
   <section class="filter-section">
-    <p class="filter">Filter op tag</p>
+    <!-- <p class="filter">Filter op tag</p> -->
     <form action="/" method="get">
-      <label> Zoekbalk
+      <label> Zoeken
         <input type="search" name="searchBar" id="searchBar">
       </label>
     </form>
-    <p class="sort">Sorteren op</p>
+    <!-- <p class="sort">Sorteren op</p> -->
   </section>
 
   <section class="cards-container">
